src/parser/g4/c0_parser.go
// Code generated from ./g4/C0.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // C0

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type C0Parser struct {
	*antlr.BaseParser
}

var c0ParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func c0ParserInit() {
	staticData := &c0ParserStaticData
	staticData.literalNames = []string{
		"", "", "", "", "'int'", "'char'", "'if'", "'else'", "'while'", "'true'",
		"'false'", "'void'", "'return'", "'const'", "'break'", "'continue'",
		"", "", "", "", "", "','", "';'", "':'", "'{'", "'}'", "'('", "')'",
		"'['", "']'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'",
		"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'",
		"'//'", "'/*'", "'*/'",
	}
	staticData.symbolicNames = []string{
		"", "COMMENT", "WS", "NEWLINE", "INT", "CHAR", "IF", "ELSE", "WHILE",
		"TRUE", "FALSE", "VOID", "RETURN", "CONST", "BREAK", "CONTINUE", "DECIMAL",
		"OCTAL", "HEXADECIMAL", "HEXADECIMALPREFIX", "IDENTIFIER", "COMMA",
		"SEMICOLON", "COLON", "LBRACE", "RBRACE", "LPARENTHESIS", "RPARENTHESIS",
		"LSQUAREBRACKET", "RSQUAREBRACKET", "ASSIGN", "PLUS", "MINUS", "MUL",
		"DIV", "MOD", "MULPLUS", "MULMINUS", "EQ", "NE", "LT", "GT", "LE", "GE",
		"NOT", "AND", "OR", "LINECOMMENT", "BEGINCOMMENT", "ENDCOMMENT",
	}
	staticData.ruleNames = []string{
		"prog", "stmtList", "stmt", "block", "funcDeclStmt", "typeTypeOrVoid",
		"typeType", "baseType", "formalParameters", "paraList", "parameter",
		"varDelcId", "funcBody", "varDeclStmt", "varDef", "constDeclStmt", "assignStmt",
		"ifStmt", "whileStmt", "funcCallStmt", "expressionList", "expression",
		"primary", "intliteral",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// C0ParserInit initializes any static state used to implement C0Parser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewC0Parser(). You can call this function if you wish to initialize the static state ahead
// of time.
func C0ParserInit() {
	staticData := &c0ParserStaticData
	staticData.once.Do(c0ParserInit)
}

// NewC0Parser produces a new parser instance for the optional input antlr.TokenStream.
func NewC0Parser(input antlr.TokenStream) *C0Parser {
	C0ParserInit()
	this := new(C0Parser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &c0ParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "C0.g4"

	return this
}

// C0Parser tokens.
const (
	C0ParserEOF               = antlr.TokenEOF
	C0ParserCOMMENT           = 1
	C0ParserWS                = 2
	C0ParserNEWLINE           = 3
	C0ParserINT               = 4
	C0ParserCHAR              = 5
	C0ParserIF                = 6
	C0ParserELSE              = 7
	C0ParserWHILE             = 8
	C0ParserTRUE              = 9
	C0ParserFALSE             = 10
	C0ParserVOID              = 11
	C0ParserRETURN            = 12
	C0ParserCONST             = 13
	C0ParserBREAK             = 14
	C0ParserCONTINUE          = 15
	C0ParserDECIMAL           = 16
	C0ParserOCTAL             = 17
	C0ParserHEXADECIMAL       = 18
	C0ParserHEXADECIMALPREFIX = 19
	C0ParserIDENTIFIER        = 20
	C0ParserCOMMA             = 21
	C0ParserSEMICOLON         = 22
	C0ParserCOLON             = 23
	C0ParserLBRACE            = 24
	C0ParserRBRACE            = 25
	C0ParserLPARENTHESIS      = 26
	C0ParserRPARENTHESIS      = 27
	C0ParserLSQUAREBRACKET    = 28
	C0ParserRSQUAREBRACKET    = 29
	C0ParserASSIGN            = 30
	C0ParserPLUS              = 31
	C0ParserMINUS             = 32
	C0ParserMUL               = 33
	C0ParserDIV               = 34
	C0ParserMOD               = 35
	C0ParserMULPLUS           = 36
	C0ParserMULMINUS          = 37
	C0ParserEQ                = 38
	C0ParserNE                = 39
	C0ParserLT                = 40
	C0ParserGT                = 41
	C0ParserLE                = 42
	C0ParserGE                = 43
	C0ParserNOT               = 44
	C0ParserAND               = 45
	C0ParserOR                = 46
	C0ParserLINECOMMENT       = 47
	C0ParserBEGINCOMMENT      = 48
	C0ParserENDCOMMENT        = 49
)

// C0Parser rules.
const (
	C0ParserRULE_prog             = 0
	C0ParserRULE_stmtList         = 1
	C0ParserRULE_stmt             = 2
	C0ParserRULE_block            = 3
	C0ParserRULE_funcDeclStmt     = 4
	C0ParserRULE_typeTypeOrVoid   = 5
	C0ParserRULE_typeType         = 6
	C0ParserRULE_baseType         = 7
	C0ParserRULE_formalParameters = 8
	C0ParserRULE_paraList         = 9
	C0ParserRULE_parameter        = 10
	C0ParserRULE_varDelcId        = 11
	C0ParserRULE_funcBody         = 12
	C0ParserRULE_varDeclStmt      = 13
	C0ParserRULE_varDef           = 14
	C0ParserRULE_constDeclStmt    = 15
	C0ParserRULE_assignStmt       = 16
	C0ParserRULE_ifStmt           = 17
	C0ParserRULE_whileStmt        = 18
	C0ParserRULE_funcCallStmt     = 19
	C0ParserRULE_expressionList   = 20
	C0ParserRULE_expression       = 21
	C0ParserRULE_primary          = 22
	C0ParserRULE_intliteral       = 23
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = C0ParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = C0ParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) StmtList() IStmtListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtListContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.ExitProg(s)
	}
}

func (s *ProgContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case C0Visitor:
		return t.VisitProg(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *C0Parser) Prog() (localctx IProgContext) {
	this := p
	_ = this

	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, C0ParserRULE_prog)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.StmtList()
	}

	return localctx
}

// IStmtListContext is an interface to support dynamic dispatch.
type IStmtListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmtListContext differentiates from other interfaces.
	IsStmtListContext()
}

type StmtListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtListContext() *StmtListContext {
	var p = new(StmtListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = C0ParserRULE_stmtList
	return p
}

func (*StmtListContext) IsStmtListContext() {}

func NewStmtListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtListContext {
	var p = new(StmtListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = C0ParserRULE_stmtList

	return p
}

func (s *StmtListContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtListContext) AllStmt() []IStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmtContext); ok {
			len++
		}
	}

	tst := make([]IStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmtContext); ok {
			tst[i] = t.(IStmtContext)
			i++
		}
	}

	return tst
}

func (s *StmtListContext) Stmt(i int) IStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *StmtListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.EnterStmtList(s)
	}
}

func (s *StmtListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.ExitStmtList(s)
	}
}

func (s *StmtListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case C0Visitor:
		return t.VisitStmtList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *C0Parser) StmtList() (localctx IStmtListContext) {
	this := p
	_ = this

	localctx = NewStmtListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, C0ParserRULE_stmtList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<C0ParserINT)|(1<<C0ParserIF)|(1<<C0ParserWHILE)|(1<<C0ParserVOID)|(1<<C0ParserRETURN)|(1<<C0ParserCONST)|(1<<C0ParserBREAK)|(1<<C0ParserCONTINUE)|(1<<C0ParserIDENTIFIER)|(1<<C0ParserSEMICOLON)|(1<<C0ParserLBRACE))) != 0 {
		{
			p.SetState(50)
			p.Stmt()
		}

		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = C0ParserRULE_stmt
	return p
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = C0ParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) VarDeclStmt() IVarDeclStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVarDeclStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVarDeclStmtContext)
}

func (s *StmtContext) ConstDeclStmt() IConstDeclStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstDeclStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstDeclStmtContext)
}

func (s *StmtContext) AssignStmt() IAssignStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignStmtContext)
}

func (s *StmtContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(C0ParserSEMICOLON, 0)
}

func (s *StmtContext) FuncDeclStmt() IFuncDeclStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncDeclStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncDeclStmtContext)
}

func (s *StmtContext) FuncCallStmt() IFuncCallStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncCallStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncCallStmtContext)
}

func (s *StmtContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *StmtContext) IfStmt() IIfStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIfStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIfStmtContext)
}

func (s *StmtContext) WhileStmt() IWhileStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhileStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhileStmtContext)
}

func (s *StmtContext) RETURN() antlr.TerminalNode {
	return s.GetToken(C0ParserRETURN, 0)
}

func (s *StmtContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *StmtContext) BREAK() antlr.TerminalNode {
	return s.GetToken(C0ParserBREAK, 0)
}

func (s *StmtContext) CONTINUE() antlr.TerminalNode {
	return s.GetToken(C0ParserCONTINUE, 0)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.ExitStmt(s)
	}
}

func (s *StmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case C0Visitor:
		return t.VisitStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *C0Parser) Stmt() (localctx IStmtContext) {
	this := p
	_ = this

	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, C0ParserRULE_stmt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(78)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(56)
			p.VarDeclStmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(57)
			p.ConstDeclStmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(58)
			p.AssignStmt()
		}
		{
			p.SetState(59)
			p.Match(C0ParserSEMICOLON)
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(61)
			p.FuncDeclStmt()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(62)
			p.FuncCallStmt()
		}
		{
			p.SetState(63)
			p.Match(C0ParserSEMICOLON)
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(65)
			p.Block()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(66)
			p.IfStmt()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(67)
			p.WhileStmt()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(68)
			p.Match(C0ParserRETURN)
		}
		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if ((_la-16)&-(0x1f+1)) == 0 && ((1<<uint((_la-16)))&((1<<(C0ParserDECIMAL-16))|(1<<(C0ParserOCTAL-16))|(1<<(C0ParserHEXADECIMAL-16))|(1<<(C0ParserIDENTIFIER-16))|(1<<(C0ParserLBRACE-16))|(1<<(C0ParserLPARENTHESIS-16))|(1<<(C0ParserPLUS-16))|(1<<(C0ParserMINUS-16))|(1<<(C0ParserMULPLUS-16))|(1<<(C0ParserMULMINUS-16))|(1<<(C0ParserNOT-16)))) != 0 {
			{
				p.SetState(69)
				p.expression(0)
			}

		}
		{
			p.SetState(72)
			p.Match(C0ParserSEMICOLON)
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(73)
			p.Match(C0ParserBREAK)
		}
		{
			p.SetState(74)
			p.Match(C0ParserSEMICOLON)
		}

	case 11:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(75)
			p.Match(C0ParserCONTINUE)
		}
		{
			p.SetState(76)
			p.Match(C0ParserSEMICOLON)
		}

	case 12:
		p.EnterOuterAlt(localctx, 12)
		{
			p.SetState(77)
			p.Match(C0ParserSEMICOLON)
		}

	}

	return localctx
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = C0ParserRULE_block
	return p
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = C0ParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(C0ParserLBRACE, 0)
}

func (s *BlockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(C0ParserRBRACE, 0)
}

func (s *BlockContext) AllStmt() []IStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmtContext); ok {
			len++
		}
	}

	tst := make([]IStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmtContext); ok {
			tst[i] = t.(IStmtContext)
			i++
		}
	}

	return tst
}

func (s *BlockContext) Stmt(i int) IStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.ExitBlock(s)
	}
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case C0Visitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *C0Parser) Block() (localctx IBlockContext) {
	this := p
	_ = this

	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, C0ParserRULE_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		p.Match(C0ParserLBRACE)
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<C0ParserINT)|(1<<C0ParserIF)|(1<<C0ParserWHILE)|(1<<C0ParserVOID)|(1<<C0ParserRETURN)|(1<<C0ParserCONST)|(1<<C0ParserBREAK)|(1<<C0ParserCONTINUE)|(1<<C0ParserIDENTIFIER)|(1<<C0ParserSEMICOLON)|(1<<C0ParserLBRACE))) != 0 {
		{
			p.SetState(81)
			p.Stmt()
		}

		p.SetState(86)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(87)
		p.Match(C0ParserRBRACE)
	}

	return localctx
}

// IFuncDeclStmtContext is an interface to support dynamic dispatch.
type IFuncDeclStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFuncDeclStmtContext differentiates from other interfaces.
	IsFuncDeclStmtContext()
}

type FuncDeclStmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFuncDeclStmtContext() *FuncDeclStmtContext {
	var p = new(FuncDeclStmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = C0ParserRULE_funcDeclStmt
	return p
}

func (*FuncDeclStmtContext) IsFuncDeclStmtContext() {}

func NewFuncDeclStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FuncDeclStmtContext {
	var p = new(FuncDeclStmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = C0ParserRULE_funcDeclStmt

	return p
}

func (s *FuncDeclStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *FuncDeclStmtContext) TypeTypeOrVoid() ITypeTypeOrVoidContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeTypeOrVoidContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeTypeOrVoidContext)
}

func (s *FuncDeclStmtContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(C0ParserIDENTIFIER, 0)
}

func (s *FuncDeclStmtContext) FormalParameters() IFormalParametersContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFormalParametersContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFormalParametersContext)
}

func (s *FuncDeclStmtContext) FuncBody() IFuncBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncBodyContext)
}

func (s *FuncDeclStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncDeclStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FuncDeclStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.EnterFuncDeclStmt(s)
	}
}

func (s *FuncDeclStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(C0Listener); ok {
		listenerT.ExitFuncDeclStmt(s)
	}
}

func (s *FuncDeclStmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case C0Visitor:
		return t.VisitFuncDeclStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *C0Parser) FuncDeclStmt() (localctx IFuncDeclStmtContext) {
	this := p
	_ = this

	localctx = NewFuncDeclStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, C0ParserRULE_funcDeclStmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()
